--- a/src/app/client/client-dashboard/client-dashboard.component.html
+++ b/src/app/client/client-dashboard/client-dashboard.component.html
@@ -71,7 +71,7 @@
               <p class="text-gray-400 text-xs mt-2">{{ formatDate(order.createdAtTimestamp) }}</p>
             </div>
             <div class="text-right">
-              <span class="block font-bold text-lg text-gray-800">{{ order.total }} €</span>
+              <span class="block font-bold text-lg text-gray-800">{{ order.total }} DH</span>
             </div>
           </div>
 
